@@ -1,6 +1,6 @@
-AUX nmdcredir.conf.d 502 SHA256 6b87470c9ca450e93a5484bce18c6bc2b868cd42a3dc082d59db50f128426608 SHA512 9bafadc77c22312256663e805216b66be118194abf9fc8ddde20e4242e92286e7b2a19419d2b55ae2b7fbb2da3a079e11f2934c997b13016d1478faff049a48b WHIRLPOOL a0c3183d2e7e84dfe61d0d05d8e962d26eab107d043643bb8d2dc88e1d36b8d1cfaedab539f2d0071664c075b433242acf0585ee60020ae541e53af1315117f1
-AUX nmdcredir.init.d 1174 SHA256 26e65ae1d55ffc223e02e747c7f797800b9780736f7a0660aa70a021d832d67f SHA512 dfa2ef41498a1ed6135f6fc0ade8d99b07213efc7380bca5a8839a232ebc2d9550c3d7954df339780e3eb5f269bd291f79325f8fb084a03b2bc2ca0103f90500 WHIRLPOOL e7c9df067427189dfb1a820c13ac3f87bc7a47e6eb60190489a8bcdb2fc7ba8ca96f3e3b8ab9073d175d7fd81d74d05392a9ff520a3d503208d93e3746fadfbd
+AUX nmdcredir.conf.d 507 SHA256 b326c7a93308202667c4c3f41045bf632a050eae5a66340bcd9d8b741bcd1ea3 SHA512 94870e616de32ed9c100f604560ad2bfbadc89ef1a9c0f4791ddf0cf4dc2d63a2ecc9088e08b4c6d413036ea00c0fe6c875341c2616fb2a792da90b2d8379d81 WHIRLPOOL f7816a8808b64ba57dfca3f17ba47b0aa91e3d197cf8b08b2b9b5e7d1a4176164dc0a2331ecf379873d3623ed7b515c5e6ba14faff7f0923e3cc88d6270897f9
+AUX nmdcredir.init.d 808 SHA256 40d038f5fe1a735d261745e0822c6901d4b7827ab9964d1a118a101d52960362 SHA512 7b2ee25767bcb0002d617c9d57128bbd358c7c424b45f4b737b556bf2de4c40ae9b163dc44a8807ea2fb790bed85ce151890859c1f43bde43061a3bcc91d99ba WHIRLPOOL e8b30cefe1129e60a4109e56fcafb5588eea04d691d92aa28db562c0c24c648b15c05fb48e82270d34af0a8a3ac4a0132a70816eaf1dd0eb06a900fe500961f9
 DIST nmdcredir-1.tar.gz 1842 SHA256 eab1a03cda65cb9ada13e922c4747c82e762d42efe4dd040be61e0179fc7d31b SHA512 caedfe0070c6df0b3f8c7b17b6457b0bc59f1a71cb89532cb0977d724654ab7a804ced3f75231f9aee2294dc4535283b7e34e45f5d427298c14c08ea1637f6aa WHIRLPOOL fc643a8f0de5c8bc302fb76a768a6139a2d4921d83cb7af3e3dbbf386ad425436a51e41526f8ffbc6bcf9d59647a16e7395241ce5d0902354436d4e9195d747a
-EBUILD nmdcredir-1.ebuild 853 SHA256 cc15cf0d67fbaa7875b02f28a2cf5548debe20a370d06ef4b4155b44deda1b96 SHA512 2851d0ce71fe3740c0868c2ad77a34a89f25a94049003e96028340ebd2896c158d70864d0d35bb90160f2eab978523c6007a05b50ec7f79e8d802a262c8a1a2f WHIRLPOOL bda21451364bf651a3e0f94008813d1c05232dbd1fde6747496dea8a3938a6905e7207946add72de1ec482b9240897d9fa7b4f83c7e62d544bc77289294c0483
-MISC ChangeLog 311 SHA256 3d05907cd74907d61f657bc19bc335e30f7be3dc7e0e01f2f978e5205247ac04 SHA512 d59d942515b70ca9905e979be7845db38dbac05a08ab5801b5d060cae8d81ee1f7845c1575ec6c8e4f5e9eaad6694203c1a10a4ab4923cbc2eeb73d79054e2fe WHIRLPOOL b17851956d40c35bd75c28093379446044fe800b0f46f2421eb85c1728a5d92658a3536d78887d76d6814b9bc13f67527824394617c99947385de853e71855c9
+EBUILD nmdcredir-1-r1.ebuild 853 SHA256 cc15cf0d67fbaa7875b02f28a2cf5548debe20a370d06ef4b4155b44deda1b96 SHA512 2851d0ce71fe3740c0868c2ad77a34a89f25a94049003e96028340ebd2896c158d70864d0d35bb90160f2eab978523c6007a05b50ec7f79e8d802a262c8a1a2f WHIRLPOOL bda21451364bf651a3e0f94008813d1c05232dbd1fde6747496dea8a3938a6905e7207946add72de1ec482b9240897d9fa7b4f83c7e62d544bc77289294c0483
+MISC ChangeLog 513 SHA256 e4370ed6d6ba724b48c3be4cd0dbf9f7d47d74332f00cf3cf191f1ff3f69ece1 SHA512 8a2ccf72eeaebd53d3f3451c25f374eac350950fb1224b2be4790cda903f151852c02bf385efddd3cdebb1e4f101c9fa7dff9a701df36f9332d51df2f78390ba WHIRLPOOL 2a18e77a6217294430e66d09a6cee61f1b1779b5bec6cff75decae5ce4651acedf81551c8405d3ee488dc0742e8025e9694a0f7c0056cc83c9780fcbc9ecaed9
 MISC metadata.xml 251 SHA256 d3cfc8be6be78d585444c874f1a50dd2cdf0fb65e8e4defdad65acf21b1b2ce0 SHA512 0a85fe888ea9f2bb94aff3540958a673b849e4f1806ffcb9310d7df7f5aa5b30267315918531792637820815d82814a3adda72e8c9ceab3e47defe0d10eb191f WHIRLPOOL 9ad134667455ee081b762d981393f63005eacb4288c10a1ebfc3dc0eb32d8da0819e707a7b7077300d71dc02e2f989c7c9f8bb25cd81544118ea309979fd8b46
