@@ -10,19 +10,6 @@ depend() {
 
 PIDFILE=/var/run/${RC_SVCNAME}.pid
 
-# port redirection_address [hub_name redirect_message]
-# Port to listen to
-NMDCREDIR_PORT="411"
-# Adress to redirect to
-NMDCREDIR_ADDR="adcs://localhost:2780/"
-
-#If a message should be sent set this to the hubname
-NMDCREDIR_HUBN="TheHub"
-
-#Message to send if NMDCREDIR_HUBN is set
-NMDCREDIR_MESS="You are being redirected to our new hub at adcs://localhost:2780/"
-
-
 start() {
 	ebegin "Starting nmdcredir ${RC_SVCNAME}"
 	if [ -z ${NMDCREDIR_HUBN} ]; then
