@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nmdcredir-1-r1 (26 Feb 2013)
+
+  26 Feb 2013; Francisco Blas Izquierdo Riera (klondike) -nmdcredir-1.ebuild,
+  +nmdcredir-1-r1.ebuild, files/nmdcredir.conf.d, files/nmdcredir.init.d:
+  Fix init script
+
 *nmdcredir-1 (26 Feb 2013)
 
   26 Feb 2013; Francisco Blas Izquierdo Riera (klondike) +nmdcredir-1.ebuild,
